fix: adjust tablet-landscape spacing in CategoriesTabs, BackButton, and Posts components

--- a/components/page/forum/Posts/Posts.module.scss
+++ b/components/page/forum/Posts/Posts.module.scss
@@ -9,7 +9,7 @@
   width: 100%;
 
   @include media.tablet-landscape {
-    padding: 12px 24px;
+    padding: 12px 0;
   }
 }
 
