--- a/components/ui/BackButton/BackButton.module.scss
+++ b/components/ui/BackButton/BackButton.module.scss
@@ -13,7 +13,7 @@
 
   @include media.tablet-landscape {
     display: flex;
-    padding: 8px 24px;
+    padding: 8px 24px 8px 0;
   }
 }
 
